--- a/assets/sass/layout.scss
+++ b/assets/sass/layout.scss
@@ -79,6 +79,7 @@
 
   @include media-query($on-palm) {
     position: absolute;
+    z-index: 999;
     top: 20px;
     right: $spacing-unit / 3;
     background-color: #fbfbfb;
